--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 buildscript {
     repositories {
-        maven {
-            url "http://artifactory.kroger.com/artifactory/libs-release"
-        }
+        mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
@@ -21,9 +19,7 @@ bootJar {
 }
 
 repositories {
-    maven {
-        url "http://artifactory.kroger.com/artifactory/libs-release"
-    }
+    mavenCentral()
 }
 
 sourceCompatibility = 1.8
